# TrafficAnalyser

./: .gitignore  CMakeLists.txt  README.MD  build.sh  configure.sh  run.sh
.run/: Analyser.run.xml  CompoundAnalyzerPlusTest.run.xml  TestAndRun.run.xml  test.run.xml
cmake/: FindBoost.cmake  FindPCAP.cmake  FindPcapPlusPlus.cmake  Finddoxygen.cmake  Findgoogletest.cmake
scripts/: install-helpers.sh  install-pcap-plus-plus.sh
src/: CMakeLists.txt  StatsHolder.cpp  StatsHolder.h  StatsHolderGlobal.cpp  StatsHolderGlobal.h  StatsHolderResult.cpp  StatsHolderResult.h  StatsHolderTmp.cpp  StatsHolderTmp.h  main.cpp
test/: CMakeLists.txt  test_all.cpp
